--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-mp.messaging.incoming.words-in.auto.offset.reset=earliest
-mp.messaging.incoming.words-in.topic=words
-mp.messaging.outgoing.words-out.topic=words
+quarkus.hibernate-orm.database.generation=drop-and-create
