--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#Config Database H2
 quarkus.datasource.db-kind=h2
 quarkus.datasource.jdbc.url=jdbc:h2:mem:default
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+#Config Rest Client
+quarkus.rest-client.authorization.url=https://util.devi.tools/api/v2/authorize
