--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 
 #Config Rest Client
 quarkus.rest-client.authorization.url=https://util.devi.tools/api/v2/authorize
+quarkus.rest-client.notification.url=https://util.devi.tools/api/v1/notify
